2005-07-13  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.dll.sources: regenerated

2005-07-11  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/IMethod.cs
	  Mono.Cecil.Implem/Instruction.cs
	  Mono.Cecil.Implem/ExceptionHandler.cs
	  Mono.Cecil.Implem/MethodDefinition.cs
	  Mono.Cecil.Implem/Label.cs
	  Mono.Cecil.Implem/CodeReader.cs
	  Mono.Cecil.Implem/MethodBody.cs
	  Mono.Cecil.Implem/CilEmitter.cs
	  Mono.Cecil.Cil/ILabel.cs
	  Mono.Cecil.Cil/IInstruction.cs
	  Mono.Cecil.Cil/IExceptionHandler.cs
	  Mono.Cecil.Cil/IMethodBody.cs
	  Mono.Cecil.Cil/ICilEmitter.cs:
		Preliminary changes on the instruction model before
		changing of latptop

2005-07-08  Jb Evain  <jbevain@gmail.com>

   * Every generated files: use \n instead of \r\n

2005-07-07  Jb Evain  <jbevain@gmail.com>

	* *.*: use Mono coding conventions
	* Mono.Xml/*.*: update Mono.Xml from corlib
	* Mono.Cecil.Metadata/CultureUtils.cs:
		Ensure that Cecil works under Mono

2005-07-02  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/IMethod.cs
	  Mono.Cecil/IProperty.cs
	  Mono.Cecil/IEvent.cs
	  Mono.Cecil/IField.cs
	  Mono.Cecil/ITypeDefinition.cs
	  Mono.Cecil.Implem/MethodDefinition.cs
	  Mono.Cecil.Implem/PropertyDefinition.cs
	  Mono.Cecil.Implem/EventDefinition.cs
	  Mono.Cecil.Implem/FieldDefinition.cs
	  Mono.Cecil.Implem/TypeDefinition.cs:
		Add some funky sugar attributes,
		more to come

2005-07-01  Jb Evain  <jbevain@gmail.com>

	* CodeGen/cecil-gen.rb,
	  CodeGen/templates/MetadataTableWriter.cs,
	  CodeGen/templates/MetadataRowWriter.cs,
	  Mono.Cecil.Metadata/MetadataTableWriter.cs,
	  Mono.Cecil.Metadata/MetadataRowWriter.cs,
	  Mono.Cecil.Metadata/MetadataWriter.cs:
		Add metadata writing visitors
	* Mono.Cecil.Metadata/CultureUtils.cs:
		Be sure to use every possible culture infos.
	* Mono.Cecil.Cil/IVariable.cs,
	  Mono.Cecil.Implem/VariableDefinition.cs,
	  Mono.Cecil.Implem/CodeReader.cs,
	  Mono.Cecil.Implem/CilEmitter.cs:
		Add an index property to local variables